tests/cases/syntax/error/formal/empty-list-in-formal.soccam
;; empty-list-in-formal.soccam
;; Tests: 
(module empty-list-in-formal (silent:show-assembly awu)
   (proc foo ([])
    (decl ((x int))
    (seq
     (:= x 3)
     (while (> x 0)
       (:= x (- x 1)))))))




